adds auth route

--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -7,8 +7,6 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>First heading</h1>
-    <h1>Second heading</h1>
-    <h1>Second heading</h1>
+    <h1>Front end is going to be here</h1>
   </body>
 </html>
