--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -12,6 +12,9 @@
         <div class="neon">TicTac</div>
         <div class="flux">Toe</div>
       </div>
+      <div class="game-title-bottom">
+        <div class="flux">Online</div>
+      </div>
       <div class="main-container">
         <aside>
           <div class="buttons">
@@ -24,14 +27,14 @@
         <div class="game-container">
           <div class="board">
             <div data-cell-index="0" class="cell">X</div>
-            <div data-cell-index="1" class="cell">O</div>
-            <div data-cell-index="2" class="cell"></div>
+            <div data-cell-index="1" class="cell"></div>
+            <div data-cell-index="2" class="cell">O</div>
             <div data-cell-index="3" class="cell"></div>
-            <div data-cell-index="4" class="cell"></div>
-            <div data-cell-index="5" class="cell"></div>
+            <div data-cell-index="4" class="cell">X</div>
+            <div data-cell-index="5" class="cell">O</div>
             <div data-cell-index="6" class="cell"></div>
             <div data-cell-index="7" class="cell"></div>
-            <div data-cell-index="8" class="cell"></div>
+            <div data-cell-index="8" class="cell">X</div>
           </div>
         </div>
       </div>
