--- a/src/frontend/login.html
+++ b/src/frontend/login.html
@@ -8,15 +8,11 @@
   </head>
   <body>
     <div class="container">
-      <h2 id="modalTitle">Login</h2>
-      <form id="modalForm">
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required />
-
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="password" required />
-
-        <button type="submit">Submit</button>
+      <div class="game-title game-title-auth"><div class="neon">Login</div></div>
+      <form id="form" class="form">
+        <input placeholder="Email" type="email" id="email" name="email" required />
+        <input placeholder="Password" type="password" id="password" name="password" required />
+        <button class="button" type="submit">Submit</button>
       </form>
     </div>
   </body>
