add init function on main page

--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -17,7 +17,7 @@
       </div>
       <div class="main-container">
         <aside>
-          <div class="buttons">
+          <div id="auth-buttons" class="buttons">
             <button id="loginBtn" class="button">Login</button>
             <button id="registerBtn" class="button">Register</button>
           </div>
