add logout frontend logic; remove keyframe animations

--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -9,18 +9,14 @@
   <body>
     <section class="main">
       <div class="game-title">
-        <div class="neon">TicTac</div>
-        <div class="flux">Toe</div>
+        <div class="left-title">TicTac</div>
+        <div class="right-title">Toe</div>
       </div>
       <div class="game-title-bottom">
-        <div class="flux">Online</div>
+        <div class="right-title">Online</div>
       </div>
       <div class="main-container">
         <aside>
-          <div id="auth-buttons" class="buttons">
-            <button id="loginBtn" class="button">Login</button>
-            <button id="registerBtn" class="button">Register</button>
-          </div>
           <div id="user-data" class="user-data"></div>
         </aside>
 
