--- a/src/frontend/login.html
+++ b/src/frontend/login.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="container">
-      <div class="game-title game-title-auth"><div class="neon">Login</div></div>
+      <div class="game-title game-title-auth"><div class="left-title">Login</div></div>
       <form id="form" class="form">
         <input placeholder="Email" type="email" id="email" name="email" required />
         <input placeholder="Password" type="password" id="password" name="password" required />
