add registration frontend

--- a/src/frontend/login.html
+++ b/src/frontend/login.html
@@ -7,13 +7,13 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="container">
+    <section class="main">
       <div class="game-title game-title-auth"><div class="left-title">Login</div></div>
       <form id="form" class="form">
         <input placeholder="Email" type="email" id="email" name="email" required />
         <input placeholder="Password" type="password" id="password" name="password" required />
         <button class="button" type="submit">Submit</button>
       </form>
-    </div>
+    </section>
   </body>
 </html>
