--- a/src/frontend/register.html
+++ b/src/frontend/register.html
@@ -8,21 +8,13 @@
   </head>
   <body>
     <div class="container">
-      <h2 id="modalTitle">Register</h2>
-      <form id="modalForm">
-        <label for="nickname">Nickname:</label>
-        <input type="text" id="nickname" name="nickname" required />
-
-        <label for="surname">Surname:</label>
-        <input type="surname" id="surname" name="surname" required />
-
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required />
-
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="password" required />
-
-        <button type="submit">Submit</button>
+      <div class="game-title game-title-auth"><div class="right-title">Register</div></div>
+      <form id="form" class="form">
+        <input placeholder="Nickname" type="text" id="nickname" name="nickname" required />
+        <input placeholder="Fullname" type="fullname" id="fullname" name="fullname" required />
+        <input placeholder="Email" type="email" id="email" name="email" required />
+        <input placeholder="Password" type="password" id="password" name="password" required />
+        <button class="button" type="submit">Submit</button>
       </form>
     </div>
   </body>
