add listen to created game event

--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -35,5 +35,11 @@
         </div>
       </div>
     </section>
+
+    <div class="modal-overlay modal-overlay-is-hidden" id="modalOverlay">
+      <div class="modal" id="modal">
+        <button class="modal-close-button" type="button" id="modalBtn">&times;</button>
+      </div>
+    </div>
   </body>
 </html>
