--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -21,7 +21,7 @@
         </aside>
 
         <div class="game-container">
-          <div class="board">
+          <div class="board" id="board">
             <div data-cell-index="0" class="cell">X</div>
             <div data-cell-index="1" class="cell"></div>
             <div data-cell-index="2" class="cell">O</div>
