add leaderboard frontend

--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -16,7 +16,7 @@
         <div class="right-title">Online</div>
       </div>
       <div class="main-container">
-        <aside>
+        <aside id="sidebar">
           <div id="user-data" class="user-data"></div>
         </aside>
 
